--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-12">
-        <img src="" alt="" class="img-fluid">
+        <img src="{{ currentRecipe.imagePath }}" alt="{{ currentRecipe.name }}" class="img-fluid" style="max-height: 500px;">
     </div>
 </div>
 <div class="row">
     <div class="col-12">
-        <h1>Recipe Name</h1>
+        <h1>{{ currentRecipe.name }}</h1>
     </div>
 </div>
 <div class="row">
@@ -22,11 +22,11 @@
 </div>
 <div class="row">
     <div class="col-12">
-        Description
+        {{ currentRecipe.description }}
     </div>
 </div>
 <div class="row">
     <div class="col-12">
-        Ingredients
+        Ingredients 
     </div>
 </div>
