--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -8,16 +8,13 @@
         <h1>{{ currentRecipe.name }}</h1>
     </div>
 </div>
-<div class="row">
-    <div class="col-12">
-        <div class="btn-group">
-            <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
-            <ul class="dropdown-menu">
-                <li><a href="#">To Shopping List</a></li>
-                <li><a href="#">Edit Recipe</a></li>
-                <li><a href="#">Delete Recipe</a></li>
+<div class="col">
+    <div class="row">
+            <ul class="list-group">
+                <li class="list-group-item"><a (click)="onToShoppingList()" style="cursor: pointer;">To Shopping List</a></li>
+                <li class="list-group-item"><a href="#">Edit Recipe</a></li>
+                <li class="list-group-item"><a href="#">Delete Recipe</a></li>
             </ul>
-        </div>
     </div>
 </div>
 <div class="row">
@@ -27,6 +24,8 @@
 </div>
 <div class="row">
     <div class="col-12">
-        Ingredients 
+        <ul class="list-group">
+            <li class="list-group-item" *ngFor="let ingredient of currentRecipe.ingredients">{{ ingredient.name }} - {{ ingredient.amount }}</li>
+        </ul>
     </div>
 </div>
