add Routing & routes
add Routing & routes

--- a/src/app/recipes/recipe-detail/recipe-detail.component.css
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.css
@@ -1,6 +1,6 @@
-a {
+ul li a {
      text-decoration: none;
-     color: rgb(83, 58, 58);
+     color: rgb(223, 92, 92);
      font-weight: bold;
 }
 
