--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,11 +5,11 @@
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-                <a class="nav-link" href="#" (click)="onSelect('recipe')">Recipes</a>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" routerLink="/recipes" >Recipes</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#" (click)="onSelect('shopping-list')">Shopping List</a>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" routerLink="/shopping-list">Shopping List</a>
             </li>
         </ul>
         <ul class="dropdown-menu" appDropdown>
