--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -17,7 +17,7 @@
 <div class="row">
     <div class="col-12">
         <ul class="list-group">
-            <li class="list-group-item" *ngFor="let ingredient of currentRecipe.ingredients">{{ ingredient.name }} - {{ ingredient.amount }}</li>
+            <li class="list-group-item" *ngFor="let ingredient of currentRecipe.ingredients; let i = index">{{ ingredient.name }} - {{ ingredient.amount }}</li>
         </ul>
     </div>
 </div>
@@ -26,7 +26,7 @@
         <div class="col-12p">
             <a class="btn btn-success m-1" (click)="onToShoppingList()" style="cursor: pointer;">To Shopping List</a>
             <a class="btn btn-warning m-1" (click)="onEditRecipe()"  style="cursor: pointer;">Edit Recipe</a>
-            <a class="btn btn-danger m-1" style="cursor: pointer;">Delete Recipe</a>
+            <a class="btn btn-danger m-1" style="cursor: pointer;" (click)="onDeleteRecipe()">Delete Recipe</a>
         </div>
     </div>
 </div>
