--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,6 @@
 <a style="cursor: pointer;" class="list-group-item clearfix border-1 border-dark mt-1" routerLinkActive="active" [routerLink]="[index]">
     <div class="float-start">
-        <h4 class="list-group-item-heading">{{ recipe.name }} -</h4>
+        <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
         <p class="list-group-item-text">{{ recipe.description }}</p>
     </div>
     <span class="float-end">
