--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,18 +11,12 @@
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="/shopping-list">Shopping List</a>
             </li>
-        </ul>
-        <ul class="dropdown-menu" appDropdown>
-            <div >
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown button
-                </button>
-                <ul >
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </div>
+            <li class="nav-item">
+                <a class="nav-link" style="cursor: pointer;" (click)="onSaveData()">Save Data</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" style="cursor: pointer;" (click)="onFetchData()">Fetch Data</a>
+            </li>
         </ul>
     </div>
 </nav>
